--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,19 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- {% if title %}
-    <title>{{ title }} - Playing with Python</title>
-    {% else %}
-    <title>Welcome to Playing with Python!</title>
-    {% endif %} -->
-    <title>TEST</title>
+    <!-- Bootstrap Link-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+  integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+    <title>Python Password Generator</title>
 </head>
 <body>
 
-
-    <button>Generate a Password</button>
-
-
+<h1 class="jumbotron">Python Password Generator</h1>
 <form action="/new-password/">
     <input type="submit" value="Click me">
 </form>
