custom css added

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,18 +8,21 @@
     <!-- Bootstrap Link-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+    <!-- Custom CSS  -->
+    <link rel="stylesheet" href="../static/css/style.css">
     <title>Python Password Generator</title>
 </head>
 
 <body>
 
-    <header class="jumbotron text-center">
+    <header class="jumbotron text-center jumbotron-style">
         <h1>Python Password Generator</h1>
     </header>
+    <hr>
 
-    <div class="container">
+    <div class="container margin100">
         <form action="/new-password/" class="row justify-content-center">
-            <input type="submit" value="Generate your new password" class="btn-lg btn-primary col-md-3">
+            <input type="submit" value="Generate your new password" class="btn-lg btn-dark col-md-3">
         </form>
     </div>
 </body>
