--- a/app/templates/new-password.html
+++ b/app/templates/new-password.html
@@ -8,16 +8,18 @@
     <!-- Bootstrap Link-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+    <!-- Custom CSS  -->
+    <link rel="stylesheet" href="../static/css/style.css">
     <title>Python Password Generator</title>
 </head>
 
 <body>
     <div class="container">
         <div class="row justify-content-center">
-            <div class="card">
-                <h3 class="card-title"> Your New Password is:</h3>
-
-                <h3 class="card-body">{{password}}</h3>
+            <div class="card margin100">
+                <h3 class="card-title text-center margin10"> Your New Password is:</h3>
+                <hr>
+                <h3 class="card-body text-center">{{password}}</h3>
             </div>
         </div>
     </div>
