--- a/app/templates/new-password.html
+++ b/app/templates/new-password.html
@@ -10,6 +10,8 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
     <!-- Custom CSS  -->
     <link rel="stylesheet" href="../static/css/style.css">
+    <!-- Favicon Link -->
+    <link rel="icon" type="image/png" href="../static/Favicon.png" />
     <title>Python Password Generator</title>
 </head>
 
