custom password displaying with selected length

--- a/app/templates/custom-password.html
+++ b/app/templates/custom-password.html
@@ -21,9 +21,9 @@
         <h1>What would you like your password to have?: </h1>
         <form action="" method="post">
             <input type="number" name="lengthSel" placeholder="length of password" class="row col-md-3 margin10" />
-            <input type="checkbox" value="Capitals" /> Capital Letters
-            <input type="checkbox" value="Special" /> Special Characters
-            <input type="checkbox" value="Numbers" /> Numbers
+            <input type="text" name="capSel" value="Capitals" /> Capital Letters
+            <input type="text" name="charSel" value="Special" /> Special Characters
+            <input type="text" name="numSel" value="Numbers" /> Numbers
             <input type="submit" value="Generate your customized password">
         </form>
         <br>
@@ -31,6 +31,11 @@
             <div class="card row justify-content-center special text-center">
                 <div>
                     <h1>{{password}}</h1>
+                    <h2>{{length}}</h2>
+                    <h4>{{password2}}</h4>
+                    <!-- <h2>{{capitals}}</h2>
+                    <h2>{{characters}}</h2>
+                    <h2>{{numbers}}</h2> -->
                 </div>
             </div>
 
