--- a/app/templates/custom-test.html
+++ b/app/templates/custom-test.html
@@ -16,22 +16,28 @@
 </head>
 
 <body>
+    <h1 class="jumbotron">Let's create a custom password</h1>
     <div class="container">
-        <div class="row justify-content-center">
-            <h1 class="col-md-12 margin10">What would you like your password to have?: </h1>
-        </div>
-        <div class="row justify-content-center">
-            <form action="" method="post">
-                <input type="number" name="lengthSel" placeholder="length of password" />
-                <input type="submit" value="Generate your customized password" class="btn btn-dark">
-            </form>
-        </div>
+        <h1>What would you like your password to have?: </h1>
+        <form action="" method="post">
+            <input type="number" name="lengthSel" placeholder="length of password" class="row col-md-3 margin10" />
+            <input type="text" name="capSel" placeholder="Capitals" /> Capital Letters
+            <input type="text" name="charSel" placeholder="Special" /> Special Characters
+            <input type="text" name="numSel" placeholder="Numbers" /> Numbers
+            <input type="checkbox" name="testSel" /> test
+            <input type="submit" value="Generate your customized password">
+        </form>
         <br>
         <div class="margin100">
             <div class="card row justify-content-center special text-center">
                 <div>
                     <h1>{{password}}</h1>
+                    <h2>{{length}}</h2>
                     <h4>{{password2}}</h4>
+                    <h2>{{capitals}}</h2>
+                    <h2>{{characters}}</h2>
+                    <h2>{{numbers}}</h2>
+                    <h2>{{test}}</h2>
                 </div>
             </div>
 
