custom password page working

--- a/app/templates/custom-password.html
+++ b/app/templates/custom-password.html
@@ -18,20 +18,24 @@
 <body>
     <div class="container">
         <div class="row justify-content-center">
-            <h1 class="col-md-12 margin10">What would you like your password to have?: </h1>
+            <h1 class="col-md-12 margin10">How long would you like your custom password?</h1>
         </div>
+        <br>
         <div class="row justify-content-center">
-            <form action="" method="post">
-                <input type="number" name="lengthSel" placeholder="length of password" />
-                <input type="submit" value="Generate your customized password" class="btn btn-dark">
+            <form action="" method="post" class="margin10">
+                <input type="number" name="lengthSel" placeholder="length of password" class="form-control margin10" />
+                <input type="submit" value="Generate your customized password"
+                    class="btn btn-danger margin10 border-dark">
             </form>
         </div>
         <br>
         <div class="margin100">
-            <div class="card row justify-content-center special text-center">
-                <div>
-                    <h1>{{password}}</h1>
-                    <h4>{{password2}}</h4>
+            <div class="card row justify-content-center special text-center border-dark rounded shadow-lg">
+                <div class="card-title margin10">
+                    <h1>{{password_desc}}</h1>
+                </div>
+                <div class="card-body border margin25">
+                    <h2>{{password}}</h2>
                 </div>
             </div>
 
