--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -10,11 +10,16 @@ height: 2000px;
 .card {
     height: 250px;
     width: 400px;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 .special {
     height: 250px;
     width: 800px;
+}
+
+.padding5 {
+    padding: 5px;
 }
 
 .margin100 {
@@ -23,4 +28,8 @@ height: 2000px;
 
 .margin10 {
     margin: 10px;
+}
+
+.margin25 {
+    margin: 25px;
 }
