custom test deconstructed

--- a/app/templates/custom-test.html
+++ b/app/templates/custom-test.html
@@ -19,7 +19,7 @@
     <h1 class="jumbotron">Let's create a custom password</h1>
     <div class="container">
         <h1>What would you like your password to have?: </h1>
-        <form action="" method="post">
+        <form action="">
             <input type="number" name="lengthSel" placeholder="length of password" class="row col-md-3 margin10" />
             <input type="text" name="capSel" placeholder="Capitals" /> Capital Letters
             <input type="text" name="charSel" placeholder="Special" /> Special Characters
